Fix terms and conditions layout issue

--- a/client/scss/modules/_terms-and-conditions.scss
+++ b/client/scss/modules/_terms-and-conditions.scss
@@ -4,7 +4,7 @@
  */
 
 .terms-and-conditions__container {
-  @extend %container;
+  @extend .container;
 }
 
 .terms-and-conditions__heading {
